--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,17 +19,34 @@
         android:hint="Type your Pincode">
 
     </EditText>
-    <EditText
-        android:id="@+id/date"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginBottom="16dp"
-        android:hint="Choose Vaccination Date">
+        android:orientation="horizontal">
+        <EditText
+            android:id="@+id/date"
+            android:layout_width="match_parent"
+            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
 
-    </EditText>
+            android:hint="Choose Vaccination Date">
+
+        </EditText>
+        <ImageView
+            android:id="@+id/calender"
+            android:layout_width="40dp"
+            android:layout_height="match_parent"
+            android:layout_margin="8dp"
+            android:src="@drawable/ic_baseline_calendar_today_24">
+
+        </ImageView>
+    </LinearLayout>
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
