--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -133,6 +133,13 @@
         android:text="Get"
         android:id="@+id/searchbyD"
         android:layout_margin="16dp"/>
+    <Button
+        android:id="@+id/stop"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Stop Service">
+
+    </Button>
 
     <TextView
         android:layout_width="wrap_content"
