--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -127,6 +127,12 @@
         tools:layout_editor_absoluteX="20dp">
 
     </Button>
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Get"
+        android:id="@+id/searchbyD"
+        android:layout_margin="16dp"/>
 
     <TextView
         android:layout_width="wrap_content"
