--- a/app/src/main/res/layout/dose_item.xml
+++ b/app/src/main/res/layout/dose_item.xml
@@ -5,7 +5,7 @@
     android:layout_margin="8dp"
     app:cardBackgroundColor="@color/white"
     android:elevation="8dp"
-    android:layout_height="150dp">
+    android:layout_height="160dp">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -18,7 +18,7 @@
             android:fontFamily="@font/arctic"
             android:id="@+id/centre_name"
             android:textStyle="bold"
-            android:padding="4dp"
+            android:padding="2dp"
             android:textSize="18sp"
             android:textColor="@color/black"/>
         <TextView
@@ -32,14 +32,14 @@
             android:text="Address"
             android:layout_toLeftOf="@+id/vaccine"
             android:fontFamily="@font/arctic"
-            android:padding="4dp"/>
+            android:padding="2dp"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/centre_name"
             android:layout_alignParentEnd="true"
             android:text="Vaccine Name"
-            android:padding="4dp"
+            android:padding="2dp"
             android:id="@+id/vaccine"
             android:textSize="14sp"
             android:fontFamily="@font/arctic"
@@ -50,7 +50,8 @@
             android:layout_below="@+id/vaccine"
             android:layout_alignParentEnd="true"
             android:text="Age"
-            android:padding="4dp"
+            android:layout_marginTop="8dp"
+            android:padding="2dp"
             android:id="@+id/age"
             android:textSize="14sp"
             android:fontFamily="@font/arctic"
@@ -62,7 +63,7 @@
             android:textStyle="bold"
             android:id="@+id/price"
             android:fontFamily="@font/arctic"
-            android:padding="4dp"
+            android:padding="2dp"
             android:textSize="18sp"
             android:text="Rs."
             android:textColor="@color/black"/>
