--- a/app/src/main/res/layout/activity_searchby_district.xml
+++ b/app/src/main/res/layout/activity_searchby_district.xml
@@ -24,6 +24,33 @@
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
         android:padding="8dp"/>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="16dp"
+        android:orientation="horizontal">
+        <EditText
+            android:id="@+id/date1"
+            android:layout_width="match_parent"
+            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+
+            android:hint="Choose Vaccination Date">
+
+        </EditText>
+        <ImageView
+            android:id="@+id/calender1"
+            android:layout_width="40dp"
+            android:layout_height="match_parent"
+            android:layout_margin="8dp"
+            android:src="@drawable/ic_baseline_calendar_today_24">
+
+        </ImageView>
+    </LinearLayout>
     <Button
         android:layout_width="match_parent"
         android:layout_margin="16dp"
