--- a/app/src/main/res/layout/activity_searchby_district.xml
+++ b/app/src/main/res/layout/activity_searchby_district.xml
@@ -15,15 +15,14 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
-        android:padding="8dp"/>
+        />
     <Spinner
         android:layout_marginTop="24dp"
         android:id="@+id/spinner2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"
-        android:padding="8dp"/>
+        android:layout_marginRight="16dp" />
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -38,9 +37,7 @@
             android:layout_weight="1"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-
             android:hint="Choose Vaccination Date">
-
         </EditText>
         <ImageView
             android:id="@+id/calender1"
@@ -51,6 +48,74 @@
 
         </ImageView>
     </LinearLayout>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Choose Preffered Vaccine :-"
+        android:textColor="@color/black"
+        android:layout_marginStart="8dp">
+
+    </TextView>
+    <RadioGroup
+        android:id="@+id/radio_group3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="8dp"
+        android:orientation="horizontal">
+        <RadioButton
+            android:id="@+id/covaxin1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="8dp"
+            android:text="COVAXIN">
+
+        </RadioButton>
+        <RadioButton
+            android:id="@+id/covidSheild1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="COVISHIELD"
+            android:layout_marginEnd="8dp">
+        </RadioButton>
+        <RadioButton
+            android:id="@+id/any1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="ANY">
+        </RadioButton>
+    </RadioGroup>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Choose Min Age limit :-"
+        android:textColor="@color/black"
+        android:layout_marginStart="8dp">
+
+    </TextView>
+    <RadioGroup
+        android:id="@+id/radio_group4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="8dp"
+        android:orientation="horizontal">
+        <RadioButton
+            android:id="@+id/age18"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="8dp"
+            android:text="18">
+
+        </RadioButton>
+        <RadioButton
+            android:id="@+id/age45"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="45"
+            android:layout_marginEnd="8dp">
+        </RadioButton>
+
+    </RadioGroup>
     <Button
         android:layout_width="match_parent"
         android:layout_margin="16dp"
@@ -58,4 +123,10 @@
         android:id="@+id/get_details"
         android:text="Submit"
         android:layout_height="wrap_content"/>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/recyclerView2"
+        android:padding="4dp"/>
 </LinearLayout>
