--- a/app/src/main/res/layout/dose_item.xml
+++ b/app/src/main/res/layout/dose_item.xml
@@ -18,7 +18,11 @@
             android:fontFamily="@font/arctic"
             android:id="@+id/centre_name"
             android:textStyle="bold"
+            android:ellipsize="end"
             android:padding="2dp"
+            android:layout_alignParentStart="true"
+            android:maxLines="1"
+            android:layout_toLeftOf="@id/price"
             android:textSize="18sp"
             android:textColor="@color/black"/>
         <TextView
