--- a/app/src/main/res/layout/activity_cases.xml
+++ b/app/src/main/res/layout/activity_cases.xml
@@ -25,14 +25,14 @@
         android:orientation="horizontal">
        <androidx.cardview.widget.CardView
            android:layout_width="100dp"
-           android:layout_height="100dp"
+           android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/white"
            android:elevation="10dp"
            android:layout_margin="8dp"
            android:layout_weight="1">
            <RelativeLayout
                android:layout_width="match_parent"
-               android:layout_height="match_parent"
+               android:layout_height="wrap_content"
                android:padding="4dp">
                <TextView
                    android:layout_width="match_parent"
@@ -40,6 +40,7 @@
                    android:text="Confirmed"
                    android:layout_marginTop="8dp"
                    android:id="@+id/confirmed"
+                   android:textStyle="bold"
                    android:fontFamily="@font/akro_bold"
                    android:textAlignment="center"
                    android:padding="4dp"
@@ -49,17 +50,29 @@
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/confirmed"
+                   android:id="@+id/confirmed_value"
                    android:text="3,04,61,397"
                    android:fontFamily="@font/akro_semibold"
                    android:textAlignment="center"
                    android:padding="4dp"
                    android:textSize="17sp"
                    android:textColor="@android:color/holo_red_dark"/>
+               <TextView
+                   android:layout_width="match_parent"
+                   android:layout_height="wrap_content"
+                   android:layout_below="@+id/confirmed_value"
+                   android:id="@+id/confirmed_inc_value"
+                   android:text="+1,397"
+                   android:fontFamily="@font/akro_semibold"
+                   android:textAlignment="center"
+                   android:padding="2dp"
+                   android:textSize="14sp"
+                   android:textColor="@android:color/holo_red_dark"/>
            </RelativeLayout>
        </androidx.cardview.widget.CardView>
         <androidx.cardview.widget.CardView
             android:layout_width="100dp"
-            android:layout_height="100dp"
+            android:layout_height="match_parent"
             android:elevation="10dp"
             app:cardBackgroundColor="@color/white"
             android:layout_margin="8dp"
@@ -72,6 +85,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="Active"
+                    android:textStyle="bold"
                     android:layout_marginTop="8dp"
                     android:id="@+id/active"
                     android:fontFamily="@font/akro_bold"
@@ -87,8 +101,10 @@
                     android:fontFamily="@font/akro_semibold"
                     android:textAlignment="center"
                     android:padding="4dp"
+                    android:id="@+id/active_value"
                     android:textSize="17sp"
                     android:textColor="@android:color/holo_blue_light"/>
+
             </RelativeLayout>
         </androidx.cardview.widget.CardView>
 
@@ -101,7 +117,7 @@
         <androidx.cardview.widget.CardView
             android:layout_width="0dp"
             android:layout_weight="1"
-            android:layout_height="100dp"
+            android:layout_height="wrap_content"
             app:cardBackgroundColor="@color/white"
             android:layout_margin="8dp"
             android:elevation="10dp">
@@ -113,6 +129,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="Recovered"
+                    android:textStyle="bold"
                     android:layout_marginTop="8dp"
                     android:id="@+id/recovered"
                     android:fontFamily="@font/akro_bold"
@@ -127,14 +144,26 @@
                     android:text="2,95,41,432"
                     android:fontFamily="@font/akro_semibold"
                     android:textAlignment="center"
+                    android:id="@+id/recovered_value"
                     android:padding="4dp"
                     android:textSize="17sp"
+                    android:textColor="@android:color/holo_green_light"/>
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/recovered_value"
+                    android:text="+5,07,614"
+                    android:fontFamily="@font/akro_semibold"
+                    android:textAlignment="center"
+                    android:padding="2dp"
+                    android:id="@+id/recovered_inc_value"
+                    android:textSize="14sp"
                     android:textColor="@android:color/holo_green_light"/>
             </RelativeLayout>
         </androidx.cardview.widget.CardView>
         <androidx.cardview.widget.CardView
             android:layout_width="0dp"
-            android:layout_height="100dp"
+            android:layout_height="wrap_content"
             android:layout_weight="1"
             app:cardBackgroundColor="@color/white"
             android:layout_margin="8dp"
@@ -151,7 +180,7 @@
                     android:layout_marginTop="8dp"
                     android:id="@+id/deceased"
                     android:textStyle="bold"
-                    android:fontFamily="@font/tle"
+                    android:fontFamily="@font/akro_bold"
                     android:textAlignment="center"
                     android:padding="4dp"
                     android:textSize="20sp"
@@ -161,16 +190,37 @@
                     android:layout_height="wrap_content"
                     android:layout_below="@+id/deceased"
                     android:text="4,00,395"
+                    android:id="@+id/deceased_value"
                     android:fontFamily="@font/akro_semibold"
                     android:textAlignment="center"
                     android:padding="4dp"
                     android:textSize="17sp"
                     android:textColor="#696969"/>
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/deceased_value"
+                    android:text="+5,07,614"
+                    android:fontFamily="@font/akro_semibold"
+                    android:textAlignment="center"
+                    android:padding="2dp"
+                    android:id="@+id/deceased_inc_value"
+                    android:textSize="14sp"
+                    android:textColor="#696969"/>
             </RelativeLayout>
 
         </androidx.cardview.widget.CardView>
     </LinearLayout>
-
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textAlignment="textStart"
+        android:padding="8dp"
+        android:text="All States/UT stats"
+        android:fontFamily="sans-serif-black"
+        android:textColor="@color/black"
+        android:textSize="20sp"
+        android:layout_margin="8dp"/>
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
