--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -122,12 +122,24 @@
         tools:layout_editor_absoluteX="20dp">
 
     </Button>
-    <Button
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Get"
-        android:id="@+id/searchbyD"
-        android:layout_margin="16dp"/>
+        android:layout_height="wrap_content">
+        <Button
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            android:text="Get"
+            android:id="@+id/searchbyD"
+            android:layout_margin="16dp"/>
+        <Button
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            android:text="Case Update"
+            android:id="@+id/casesSearch"
+            android:layout_margin="16dp"/>
+    </LinearLayout>
     <Button
         android:id="@+id/stop"
         android:layout_width="match_parent"
