--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,165 +8,32 @@
     android:orientation="vertical"
     tools:context=".MainActivity">
 
-    <EditText
-        android:id="@+id/Pincode"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginBottom="8dp"
-        android:hint="Type your Pincode">
+   <Button
+       android:id="@+id/activity1"
+       android:layout_width="match_parent"
+       android:layout_height="wrap_content"
+       android:layout_margin="16dp"
+       android:layout_gravity="center"
+       android:text="Vaccine Scheduler">
 
-    </EditText>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginBottom="16dp"
-        android:orientation="horizontal">
-        <EditText
-            android:id="@+id/date"
-            android:layout_width="match_parent"
-            android:layout_weight="1"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-
-            android:hint="Choose Vaccination Date">
-
-        </EditText>
-        <ImageView
-            android:id="@+id/calender"
-            android:layout_width="40dp"
-            android:layout_height="match_parent"
-            android:layout_margin="8dp"
-            android:src="@drawable/ic_baseline_calendar_today_24">
-
-        </ImageView>
-    </LinearLayout>
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Choose Preffered Vaccine :-"
-        android:textColor="@color/black"
-        android:layout_marginStart="8dp">
-
-    </TextView>
-    <RadioGroup
-        android:id="@+id/radio_group"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="8dp"
-        android:orientation="horizontal">
-        <RadioButton
-            android:id="@+id/covaxin"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="8dp"
-            android:text="COVAXIN">
-
-        </RadioButton>
-        <RadioButton
-            android:id="@+id/covidSheild"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="COVISHIELD"
-            android:layout_marginEnd="8dp">
-        </RadioButton>
-
-    </RadioGroup>
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Choose Min Age limit :-"
-        android:textColor="@color/black"
-        android:layout_marginStart="8dp">
-
-    </TextView>
-    <RadioGroup
-        android:id="@+id/radio_group2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="8dp"
-        android:orientation="horizontal">
-        <RadioButton
-            android:id="@+id/age1"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="8dp"
-            android:text="18">
-
-        </RadioButton>
-        <RadioButton
-            android:id="@+id/age2"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="45"
-            android:layout_marginEnd="8dp">
-        </RadioButton>
-
-    </RadioGroup>
+   </Button>
 
     <Button
-        android:id="@+id/find"
+        android:id="@+id/activity2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
-        android:text="Set Notification Alert"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:layout_editor_absoluteX="20dp">
+        android:layout_gravity="center"
+        android:text="Covid Cases">
 
     </Button>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <Button
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:layout_height="wrap_content"
-            android:text="Get"
-            android:id="@+id/searchbyD"
-            android:layout_margin="16dp"/>
-        <Button
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:layout_height="wrap_content"
-            android:text="Case Update"
-            android:id="@+id/casesSearch"
-            android:layout_margin="16dp"/>
-    </LinearLayout>
     <Button
-        android:id="@+id/stop"
+        android:id="@+id/activity3"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginRight="16dp"
-        android:layout_marginLeft="16dp"
-        android:text="Stop Service">
+        android:layout_margin="16dp"
+        android:layout_gravity="center"
+        android:text="Check Slots Availaibility">
 
     </Button>
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Availaible Vaccines list :-"
-        android:textColor="@color/black"
-        android:textStyle="bold"
-        android:textSize="20dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp">
-
-    </TextView>
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/vaccine_list"
-        android:layout_margin="8dp"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-    </androidx.recyclerview.widget.RecyclerView>
-
 </LinearLayout>
