--- a/app/src/main/res/layout/activity_cases_by_district.xml
+++ b/app/src/main/res/layout/activity_cases_by_district.xml
@@ -10,17 +10,6 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/codename"
-        android:text="Code Name"
-        android:layout_margin="16dp"
-        android:textAlignment="center"
-        android:textSize="20sp"
-        android:textColor="@color/black"
-        android:fontFamily="@font/arctic"/>
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
         android:id="@+id/actualName"
         android:text="Actual Name"
         android:layout_margin="16dp"
@@ -28,5 +17,26 @@
         android:textSize="20sp"
         android:fontFamily="@font/arctic"
         android:textColor="@color/black"/>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/codeName"
+        android:text="Actual Name"
+        android:layout_margin="16dp"
+        android:textAlignment="center"
+        android:textSize="20sp"
+        android:fontFamily="@font/arctic"
+        android:textColor="@color/black"/>
+    <androidx.appcompat.widget.SearchView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/search_view"
+        android:padding="8dp"
+        android:layout_margin="8dp"/>
+    <androidx.recyclerview.widget.RecyclerView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/rv10"
+        android:padding="8dp"/>
 
 </LinearLayout>
