--- a/app/src/main/res/layout/activity_slot_availaibility.xml
+++ b/app/src/main/res/layout/activity_slot_availaibility.xml
@@ -39,7 +39,7 @@
                     android:id="@+id/radiobtn_district"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:button="#ffffff"
+                    android:button="@color/white"
                     android:textAlignment="center"
                     android:background="@drawable/radiobuttonleft_selector"
                     android:checked="true"
@@ -52,7 +52,7 @@
                     android:layout_weight="1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:button="#ffffff"
+                    android:button="@color/white"
                     android:textAlignment="center"
                     android:background="@drawable/radiobuttonmid_selector"
                     android:text="Pincode">
@@ -63,7 +63,7 @@
                     android:layout_weight="1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:button="#ffffff"
+                    android:button="@color/white"
                     android:textAlignment="center"
                     android:background="@drawable/radiobuttonright_selector"
                     android:text="Location">
@@ -128,7 +128,7 @@
                 android:id="@+id/radiobtn_covaxin"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:button="#ffffff"
+                android:button="@color/white"
                 android:textAlignment="center"
                 android:padding="16dp"
                 android:background="@drawable/radiobuttonvaccine_selector"
@@ -142,7 +142,7 @@
                 android:layout_weight="1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:button="#ffffff"
+                android:button="@color/white"
                 android:padding="16dp"
                 android:layout_marginLeft="8dp"
                 android:textAlignment="center"
@@ -157,7 +157,7 @@
                 android:padding="16dp"
                 android:layout_marginLeft="8dp"
                 android:layout_height="wrap_content"
-                android:button="#ffffff"
+                android:button="@color/white"
                 android:textAlignment="center"
                 android:background="@drawable/radiobuttonvaccine_selector"
                 android:text="Sputnik-V">
