--- a/app/src/main/res/drawable/radiobuttonmid_checked.xml
+++ b/app/src/main/res/drawable/radiobuttonmid_checked.xml
@@ -2,7 +2,6 @@
 <shape
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="@color/teal_200"/>
-    <corners android:bottomLeftRadius="5dp" android:topLeftRadius="5dp"/>
+    <solid android:color="@color/teal_200"/>/>
 
 </shape>
