--- a/app/src/main/res/layout/activity_vaccine_notif_schedule.xml
+++ b/app/src/main/res/layout/activity_vaccine_notif_schedule.xml
@@ -1,159 +1,300 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:fillViewport="true"
+    android:background="#BAF2FB"
     tools:context=".VaccineNotifSchedule">
 
-    <EditText
-        android:id="@+id/Pincode"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginBottom="8dp"
-        android:hint="Type your Pincode">
-
-    </EditText>
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginBottom="16dp"
-        android:orientation="horizontal">
-        <EditText
-            android:id="@+id/date"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
-            android:layout_weight="1"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginBottom="8dp"
+            app:cardBackgroundColor="#F3F3F3"
+            app:cardCornerRadius="10dp">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="8dp"
+                android:orientation="vertical">
 
-            android:hint="Choose Vaccination Date">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Search by :-"
+                    android:textColor="@color/black"
+                    android:layout_marginTop="16dp"
+                    android:layout_marginStart="8dp">
+                </TextView>
 
-        </EditText>
-        <ImageView
-            android:id="@+id/calender"
-            android:layout_width="40dp"
-            android:layout_height="match_parent"
-            android:layout_margin="8dp"
-            android:src="@drawable/ic_baseline_calendar_today_24">
+                <RadioGroup
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="8dp"
+                    android:layout_marginRight="8dp"
+                    android:layout_marginTop="8dp"
+                    android:orientation="horizontal">
 
-        </ImageView>
+                    <RadioButton
+                        android:id="@+id/radiobtn_district"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:button="@color/white"
+                        android:textAlignment="center"
+                        android:background="@drawable/radiobuttonleft_selector"
+                        android:checked="true"
+                        android:layout_weight="1"
+                        android:text="District">
+
+                    </RadioButton>
+                    <RadioButton
+                        android:id="@+id/radiobtn_pin"
+                        android:layout_weight="1"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:button="@color/white"
+                        android:textAlignment="center"
+                        android:background="@drawable/radiobuttonmid_selector"
+                        android:text="Pincode">
+
+                    </RadioButton>
+                    <RadioButton
+                        android:id="@+id/radiobtn_location"
+                        android:layout_weight="1"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:button="@color/white"
+                        android:textAlignment="center"
+                        android:background="@drawable/radiobuttonright_selector"
+                        android:text="Location">
+
+                    </RadioButton>
+                </RadioGroup>
+
+                <EditText
+                    android:id="@+id/PincodeEdit"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="8dp"
+                    android:layout_marginRight="8dp"
+                    android:layout_marginTop="16dp"
+                    android:visibility="gone"
+                    android:hint="Type Pincode here">
+
+                </EditText>
+                <LinearLayout
+                    android:layout_marginTop="16dp"
+                    android:padding="8dp"
+                    android:id="@+id/spinnerLayout"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:visibility="visible">
+                    <Spinner
+                        android:id="@+id/spinner1"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="8dp"
+                        android:layout_marginRight="8dp" />
+                    <Spinner
+                        android:layout_marginTop="24dp"
+                        android:id="@+id/spinner2"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="8dp"
+                        android:layout_marginRight="8dp" />
+                </LinearLayout>
+            </LinearLayout>
+        </androidx.cardview.widget.CardView>
+
+
+
+        <androidx.cardview.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="8dp"
+            app:cardCornerRadius="10dp"
+            app:cardBackgroundColor="#F3F3F3">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="8dp"
+                android:orientation="vertical">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Choose Preffered Vaccine :-"
+                    android:textColor="@color/black"
+                    android:layout_marginTop="16dp"
+                    android:layout_marginStart="8dp">
+
+                </TextView>
+
+                <RadioGroup
+                    android:id="@+id/vac_radiogrup"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="8dp"
+                    android:layout_marginRight="8dp"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginBottom="16dp"
+                    android:orientation="horizontal">
+
+                    <RadioButton
+                        android:id="@+id/radiobtn_covaxin"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:button="@color/white"
+                        android:textAlignment="center"
+                        android:padding="16dp"
+                        android:background="@drawable/radiobuttonvaccine_selector"
+                        android:checked="true"
+                        android:layout_weight="1"
+                        android:text="Covaxin">
+
+                    </RadioButton>
+                    <RadioButton
+                        android:id="@+id/radiobtn_covidsheild"
+                        android:layout_weight="1"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:button="@color/white"
+                        android:padding="16dp"
+                        android:layout_marginLeft="8dp"
+                        android:textAlignment="center"
+                        android:background="@drawable/radiobuttonvaccine_selector"
+                        android:text="Covishield">
+
+                    </RadioButton>
+                    <RadioButton
+                        android:id="@+id/radiobtn_sputnik"
+                        android:layout_weight="1"
+                        android:layout_width="wrap_content"
+                        android:padding="16dp"
+                        android:layout_marginLeft="8dp"
+                        android:layout_height="wrap_content"
+                        android:button="@color/white"
+                        android:textAlignment="center"
+                        android:background="@drawable/radiobuttonvaccine_selector"
+                        android:text="Sputnik-V">
+
+                    </RadioButton>
+                </RadioGroup>
+
+            </LinearLayout>
+        </androidx.cardview.widget.CardView>
+
+
+        <androidx.cardview.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:cardBackgroundColor="#F3F3F3"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="8dp"
+            app:cardCornerRadius="5dp">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="8dp"
+                android:orientation="vertical">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Choose Min Age limit :-"
+                    android:textColor="@color/black"
+                    android:layout_marginTop="16dp"
+                    android:layout_marginStart="16dp">
+
+                </TextView>
+
+                <RadioGroup
+                    android:id="@+id/radio_group2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginStart="16dp"
+                    android:orientation="horizontal">
+                    <RadioButton
+                        android:id="@+id/age1"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginEnd="8dp"
+                        android:checked="true"
+                        android:text="18">
+
+                    </RadioButton>
+                    <RadioButton
+                        android:id="@+id/age2"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="45"
+                        android:layout_marginEnd="8dp">
+                    </RadioButton>
+
+                </RadioGroup>
+            </LinearLayout>
+        </androidx.cardview.widget.CardView>
+
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp"
+            android:layout_marginTop="16dp"
+            android:orientation="horizontal">
+            <EditText
+                android:id="@+id/date"
+                android:layout_width="match_parent"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+
+                android:hint="Choose Vaccination Date">
+
+            </EditText>
+            <ImageView
+                android:id="@+id/calender"
+                android:layout_width="40dp"
+                android:layout_height="match_parent"
+                android:layout_margin="8dp"
+                android:src="@drawable/ic_baseline_calendar_today_24">
+
+            </ImageView>
+        </LinearLayout>
+        <Button
+            android:id="@+id/set_notifSchedule"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="16dp"
+            android:text="Schedule Vaccine Notification"/>
+        <Button
+            android:id="@+id/stop"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp"
+            android:text="Cancel Schedule"/>
     </LinearLayout>
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Choose Preffered Vaccine :-"
-        android:textColor="@color/black"
-        android:layout_marginStart="8dp">
-
-    </TextView>
-    <RadioGroup
-        android:id="@+id/radio_group"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="8dp"
-        android:orientation="horizontal">
-        <RadioButton
-            android:id="@+id/covaxin"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="8dp"
-            android:text="COVAXIN">
-
-        </RadioButton>
-        <RadioButton
-            android:id="@+id/covidSheild"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="COVISHIELD"
-            android:layout_marginEnd="8dp">
-        </RadioButton>
-
-    </RadioGroup>
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Choose Min Age limit :-"
-        android:textColor="@color/black"
-        android:layout_marginStart="8dp">
-
-    </TextView>
-    <RadioGroup
-        android:id="@+id/radio_group2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="8dp"
-        android:orientation="horizontal">
-        <RadioButton
-            android:id="@+id/age1"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="8dp"
-            android:text="18">
-
-        </RadioButton>
-        <RadioButton
-            android:id="@+id/age2"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="45"
-            android:layout_marginEnd="8dp">
-        </RadioButton>
-
-    </RadioGroup>
-
-    <Button
-        android:id="@+id/find"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="16dp"
-        android:text="Set Notification Alert"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:layout_editor_absoluteX="20dp">
-
-    </Button>
-    <Button
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Get"
-        android:id="@+id/searchbyD"
-        android:layout_margin="16dp"/>
-    <Button
-        android:id="@+id/stop"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginRight="16dp"
-        android:layout_marginLeft="16dp"
-        android:text="Stop Service">
-
-    </Button>
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Availaible Vaccines list :-"
-        android:textColor="@color/black"
-        android:textStyle="bold"
-        android:textSize="20dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp">
-
-    </TextView>
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/vaccine_list"
-        android:layout_margin="8dp"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-    </androidx.recyclerview.widget.RecyclerView>
-</LinearLayout>
+</ScrollView>
