--- a/app/src/main/res/layout/activity_cases.xml
+++ b/app/src/main/res/layout/activity_cases.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Cases"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="#2193b0">
 
     <TextView
         android:layout_width="match_parent"
@@ -28,6 +29,7 @@
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/white"
            android:elevation="10dp"
+           app:cardCornerRadius="8dp"
            android:layout_margin="8dp"
            android:layout_weight="1">
            <RelativeLayout
@@ -225,7 +227,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/recyclerview4"
-        android:padding="8dp"/>
+        android:padding="16dp"
+        />
 
 
 </LinearLayout>
