--- a/app/src/main/res/layout/schedulelist_item.xml
+++ b/app/src/main/res/layout/schedulelist_item.xml
@@ -29,6 +29,7 @@
 
         </TextView>
         <ImageView
+            android:id="@+id/delete_alert"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/ic_baseline_delete_24"
@@ -52,7 +53,7 @@
             android:layout_height="wrap_content"
             android:layout_toLeftOf="@+id/date"
             android:layout_alignParentStart="true"
-            android:textSize="22sp"
+            android:textSize="18sp"
             android:layout_below="@+id/divider"
             android:text="Covaxin , 18-44 age"
             android:layout_margin="8dp">
@@ -73,7 +74,7 @@
             android:id="@+id/address"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="22sp"
+            android:textSize="18sp"
             android:text="Moradabad, Uttar Pradesh "
             android:layout_below="@+id/vac_age_detail"
             android:layout_marginStart="8dp">
@@ -86,7 +87,7 @@
             android:layout_alignParentStart="true"
             android:layout_marginBottom="16dp"
             android:layout_toLeftOf="@+id/search_icon"
-            android:textSize="18sp"
+            android:textSize="16sp"
             android:text="Vaccine slots are not availaible\nWe are still searching... ->"
             android:layout_below="@+id/address"
             android:layout_marginStart="8dp"
@@ -95,8 +96,8 @@
         </TextView>
         <ImageView
             android:id="@+id/search_icon"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
             android:layout_below="@+id/address"
             android:layout_alignParentEnd="true"
             android:src="@drawable/ic_baseline_search_24"
